--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <input type="password" id="password" placeholder="Password" />
     <button id="action">Login</button>
   </div>  <script>
-    const JSON_URL = "https://R0Y4L-KING.github.io/data.json"; // Update with your GitHub Pages URL
+    const JSON_URL = "https://r0y4l-king.github.io/mod-login-data/data.json"; // Update with your GitHub Pages URL
 
     async function fetchData() {
       const res = await fetch(JSON_URL);
