--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Secure Mod Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -17,6 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
     .card {
       background: #fff;
@@ -65,18 +67,48 @@
     button:hover {
       background: #2980b9;
     }
+
+    /* Toast style */
+    .toast {
+      visibility: hidden;
+      min-width: 250px;
+      background-color: #2ecc71;
+      color: white;
+      text-align: center;
+      border-radius: 10px;
+      padding: 16px;
+      position: fixed;
+      z-index: 1;
+      left: 50%;
+      bottom: 30px;
+      transform: translateX(-50%);
+      font-size: 16px;
+      font-weight: bold;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .toast.show {
+      visibility: visible;
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
-  <div class="card">
+
+  <div class="card" id="loginCard">
     <div class="title" id="title">Loading...</div>
     <div class="desc" id="desc"></div>
     <div class="error" id="error"></div>
     <input type="text" id="username" placeholder="Username" />
     <input type="password" id="password" placeholder="Password" />
     <button id="action">Login</button>
-  </div>  <script>
-    const JSON_URL = "https://r0y4l-king.github.io/mod-login-data/data.json" // Update with your GitHub Pages URL
+  </div>
+
+  <div id="toast" class="toast">✅ Login Success</div>
+
+  <script>
+    const JSON_URL = "https://r0y4l-king.github.io/mod-login-data/data.json";
 
     async function fetchData() {
       const res = await fetch(JSON_URL);
@@ -98,6 +130,15 @@
       document.getElementById("password").disabled = true;
     }
 
+    function showToast(message) {
+      const toast = document.getElementById("toast");
+      toast.innerText = message;
+      toast.classList.add("show");
+      setTimeout(() => {
+        toast.classList.remove("show");
+      }, 3000);
+    }
+
     async function init() {
       const data = await fetchData();
 
@@ -108,13 +149,14 @@
       document.getElementById("action").onclick = () => {
         const u = document.getElementById("username").value.trim();
         const p = document.getElementById("password").value.trim();
+        const errorEl = document.getElementById("error");
 
         if (!data.users[u]) {
-          document.getElementById("error").innerText = "User not found";
+          errorEl.innerText = "User not found";
           return;
         }
         if (!data.users[u].active) {
-          document.getElementById("error").innerText = "Account deactivated";
+          errorEl.innerText = "Account deactivated";
           return;
         }
         if (isExpired(data.users[u].expiry)) {
@@ -122,13 +164,198 @@
           return;
         }
         if (data.users[u].password !== p) {
-          document.getElementById("error").innerText = "Incorrect password";
+          errorEl.innerText = "Incorrect password";
           return;
         }
-        window.location.href = data.control.url;
+
+        // ✅ SUCCESS: Hide login card and show toast
+        document.getElementById("loginCard").style.display = "none";
+        showToast("✅ Login Success");
       };
     }
 
     init();
-  </script></body>
-</html>
+  </script>
+
+</body>
+  </html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Secure Mod Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+    }
+    body {
+      background: linear-gradient(135deg, #2c3e50, #3498db);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+    .card {
+      background: #fff;
+      padding: 30px;
+      border-radius: 20px;
+      width: 320px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+      text-align: center;
+    }
+    .title {
+      font-size: 26px;
+      font-weight: 600;
+      color: #2c3e50;
+      margin-bottom: 10px;
+    }
+    .desc {
+      font-size: 14px;
+      color: #7f8c8d;
+      margin-bottom: 20px;
+    }
+    .error {
+      font-size: 14px;
+      color: red;
+      margin-bottom: 10px;
+    }
+    input {
+      width: 100%;
+      padding: 12px 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 14px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #3498db;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: bold;
+      transition: background 0.3s;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+
+    /* Toast style */
+    .toast {
+      visibility: hidden;
+      min-width: 250px;
+      background-color: #2ecc71;
+      color: white;
+      text-align: center;
+      border-radius: 10px;
+      padding: 16px;
+      position: fixed;
+      z-index: 1;
+      left: 50%;
+      bottom: 30px;
+      transform: translateX(-50%);
+      font-size: 16px;
+      font-weight: bold;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .toast.show {
+      visibility: visible;
+      opacity: 1;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="card" id="loginCard">
+    <div class="title" id="title">Loading...</div>
+    <div class="desc" id="desc"></div>
+    <div class="error" id="error"></div>
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
+    <button id="action">Login</button>
+  </div>
+
+  <div id="toast" class="toast">✅ Login Success</div>
+
+  <script>
+    const JSON_URL = "https://r0y4l-king.github.io/mod-login-data/data.json";
+
+    async function fetchData() {
+      const res = await fetch(JSON_URL);
+      const data = await res.json();
+      return data;
+    }
+
+    function isExpired(dateStr) {
+      const today = new Date();
+      const expiry = new Date(dateStr);
+      return today > expiry;
+    }
+
+    function showExpired(expiryDate) {
+      document.getElementById("title").innerText = "Access Expired";
+      document.getElementById("desc").innerHTML = `Your access expired on <b style='color:red;'>${expiryDate}</b>. Please renew to continue.`;
+      document.getElementById("action").innerText = "RENEW NOW";
+      document.getElementById("username").disabled = true;
+      document.getElementById("password").disabled = true;
+    }
+
+    function showToast(message) {
+      const toast = document.getElementById("toast");
+      toast.innerText = message;
+      toast.classList.add("show");
+      setTimeout(() => {
+        toast.classList.remove("show");
+      }, 3000);
+    }
+
+    async function init() {
+      const data = await fetchData();
+
+      document.getElementById("title").innerText = data.control.title;
+      document.getElementById("desc").innerText = data.control.description;
+      document.getElementById("action").innerText = data.control.button_text;
+
+      document.getElementById("action").onclick = () => {
+        const u = document.getElementById("username").value.trim();
+        const p = document.getElementById("password").value.trim();
+        const errorEl = document.getElementById("error");
+
+        if (!data.users[u]) {
+          errorEl.innerText = "User not found";
+          return;
+        }
+        if (!data.users[u].active) {
+          errorEl.innerText = "Account deactivated";
+          return;
+        }
+        if (isExpired(data.users[u].expiry)) {
+          showExpired(data.users[u].expiry);
+          return;
+        }
+        if (data.users[u].password !== p) {
+          errorEl.innerText = "Incorrect password";
+          return;
+        }
+
+        // ✅ SUCCESS: Hide login card and show toast
+        document.getElementById("loginCard").style.display = "none";
+        showToast("✅ Login Success");
+      };
+    }
+
+    init();
+  </script>
+
+</body>
+  </html>
